--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "@codemirror/lang-python": "^6.1.6",
     "@codemirror/language": "^6.10.3",
     "@codemirror/state": "^6.4.1",
+    "@fortawesome/fontawesome-free": "^6.6.0",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@monaco-editor/react": "^4.6.0",
     "@pyscript/core": "^0.6.5",
     "@types/react": "npm:types-react@alpha",
