--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "pyodide": "^0.26.4",
     "react": "19.0.0-rc-09111202-20241011",
     "react-dom": "19.0.0-rc-09111202-20241011",
+    "react-resizable-panels": "^2.1.7",
     "tailwind-merge": "^2.5.3"
   },
   "devDependencies": {
